--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,34 +199,35 @@ section {
 }
 
 .contact {
-    background:#024e76;
     text-align: center;
-}
-
-.contact h2 {
+    background: #024e76;
+  }
+  
+  .contact h2 {
     color: #fce138;
-}
-
-.contact-info iframe {
+  }
+  
+  .contact-info iframe {
     width: 400px;
     height: 400px;
-}
-
-.contact-info div {
+  }
+  
+  .contact-info div {
     width: 410px;
     display: inline-block;
     vertical-align: top;
     text-align: left;
     margin: 30px 0 0 60px;
     color: white;
-}
-
-.contact-info h3 {
+  }
+  
+  .contact-info h3 {
     color: #fce138;
     font-size: 32px;
   }
   
-  .contact-info p, .contact-info address {
+  .contact-info p,
+  .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
