--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 h3 {
@@ -87,11 +95,14 @@ header nav ul li a {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
 }
 
 .step h3 {
@@ -149,6 +160,8 @@ section {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -164,15 +177,18 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 
 .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
     color: #024e76;
     padding: 20px;
     border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form p {
@@ -243,69 +259,78 @@ section {
 
 .contact {
     background: #024e76;
-  }
+}
   
-  .contact h2 {
+.contact h2 {
     color: #fce138;
-  }
+}
   
-  .contact-info iframe {
+.contact-info iframe {
     
-  }
+}
 
-  .contact-info {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-  }
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
-  .contact-info > * {
-      flex: 1;
-      margin: 15px;
-  }
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
   
-  .contact-info div {
+.contact-info div {
     color: white;
-  }
+}
   
-  .contact-info h3 {
+.contact-info h3 {
     color: #fce138;
     font-size: 32px;
-  }
+}
   
-  .contact-info p,
-  .contact-info address {
+.contact-info p,
+.contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 16px;
     font-style: normal;
-  }
+}
 
-  .contact-form input,
-  .contact-form textarea {
-      border: 1px solid #024e76;
-      display: block;
-      padding: 7px 15px;
-      font-size: 16px;
-      color: #024e76;
-      width: 100%;
-      margin-bottom: 15px;
-      margin-top: 5px;
-  }
+.contact-form input,
+.contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.75);
+}
 
-  .contact-form button {
-      width: 100%;
-      border: none;
-      background: #fce138;
-      color: #024e76;
-      text-align: center;
-      padding: 15px 0;
-      font-size: 16px;
-  }
-  
-  .contact-info a {
+.contact-form input,
+.contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+}
+
+.contact-form button:hover {
+    width: 100%;
+    border: none;
+    background: #39a6b2;
     color: #fce138;
-  }
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+    border-radius: 10px;
+}
+  
+.contact-info a {
+    color: #fce138;
+}
 
 footer {
     background: #fce138;
@@ -330,6 +355,13 @@ footer h2 {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255,255,255,1);
+    outline: none;
 }
 
 footer div {
@@ -350,11 +382,13 @@ footer a {
     header {
        padding-bottom: 0;
        justify-content: center;
+       position: relative;
     }
 
     header h1 {
         width: 100%;
         text-align: center;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 
     header nav ul {
@@ -363,8 +397,12 @@ footer a {
         justify-content: center;
     }
     
-    header nav ul li a {
+    header nav ul li a:hover {
         font-size: 20px;
+        text-shadow: none;
+        background: #fce138;
+        color: #024e76;
+        border-radius: 15px;
     }
     
     footer h2, footer div {
@@ -395,10 +433,62 @@ footer a {
   
   /* MEDIA QUERY FOR TABLETS AND SMALLER */
   @media screen and (max-width: 768px) {
-     
+    section {
+        padding: 30px 15px;
+    }
+
+    .step h3 {
+        flex: 1 100%;
+        text-align: center;
+    }
+    
+    .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+    
+    .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    
+    .step-text {
+        flex: 100%;  
+    }
     }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
   @media screen and (max-width: 575px) {
+    .hero-form button:hover {
+        width: 100%;
+        border-radius: 10px;
+        background-color: #39a6b2;
+    }
     
+    .section-title {
+        width: 95%;
+    }
+    
+    .intro p {
+        width: 100%;
+    }
+    
+    .trainer {
+        flex: 0 100%;
+    }
+    
+    .contact-info {
+        text-align: center;
+    }
+    
+    .contact-info > * {
+        flex: 0 100%;
+    }
+
+    .contact-form {
+        order: 3;
+    }
     }
